<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <Button
        android:id="@+id/bound_device_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bound_device" />

    <Button
        android:id="@+id/create_service_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_service" />

    <Button
        android:id="@+id/connect_service_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_service" />

    <Button
        android:id="@+id/a2dp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a2dp" />
</LinearLayout>